Fixed spacing on items list

--- a/src/app/pages/main/components/home-content/components/home-items/home-items.component.scss
+++ b/src/app/pages/main/components/home-content/components/home-items/home-items.component.scss
@@ -1,7 +1,13 @@
 @import "../../../../../../../variables.scss";
 
+.container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .item {
-    width: calc(100% - 16px);
+    width: calc(100% - 32px);
     margin: 8px;
     height: 64px;
     border-radius: 6px;
